[gd_scene load_steps=8 format=1]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://bg-color.png" type="Texture" id=2]
[ext_resource path="res://alarm.ogg" type="AudioStream" id=3]
[ext_resource path="res://kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://button.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

font/size = 250
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 50
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 365, 635 )
transform/scale = Vector2( 8.3, 13.7 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 300.0
one_shot = false
autostart = false

[node name="Alarm" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Counter2" type="Label" parent="."]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 720.0
margin/top = 282.0
margin/right = 1500.0
margin/bottom = 564.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.063446, 0.902344, 0.705727, 1 )
custom_colors/font_color_shadow = Color( 0.0898438, 0.0607147, 0.0607147, 1 )
text = "5:00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Counter1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 960.0
margin/right = 780.0
margin/bottom = 1242.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.063446, 0.902344, 0.705727, 1 )
custom_colors/font_color_shadow = Color( 0.0898438, 0.0607147, 0.0607147, 1 )
text = "5:00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Reset" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 360.0
margin/right = 371.0
margin/bottom = 585.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 3 )
params/stretch_mode = 0

[node name="Reset" type="Label" parent="Reset"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 240.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.460419, 0.835938, 0.827136, 1 )
text = "Reset"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Pause" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 360.0
margin/right = 671.0
margin/bottom = 585.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 3 )
params/stretch_mode = 0

[node name="Pause" type="Label" parent="Pause"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 240.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.460419, 0.835938, 0.827136, 1 )
text = "Pause"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 600.0
margin/right = 371.0
margin/bottom = 825.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Start" type="Label" parent="Start"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 240.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.460419, 0.835938, 0.827136, 1 )
text = "Start"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]

[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]


